# Amber

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  ROADMAP.md  amber.toml.example  amberd.service
.github/workflows/: ci.yml
amber-cli/: Cargo.toml
amber-cli/src/: cli.rs  main.rs  tui.rs
amber-core/: Cargo.toml
amber-core/src/: archive.rs  config.rs  delta.rs  engine.rs  gate.rs  git.rs  hash.rs  hooks.rs  ipc.rs  lib.rs  lock.rs  manifest.rs  mirror.rs  remote.rs  search.rs  session.rs  snapshot.rs  storage.rs
amber-core/tests/: integration.rs
amber-daemon/: Cargo.toml
amber-daemon/src/: daemon.rs  main.rs
