[package]
name = "amber-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
bsdiff = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tempfile = "3"
